--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.0",
+    "@react-navigation/bottom-tabs": "^7.3.15",
+    "@react-navigation/stack": "^7.3.4",
     "axios": "^1.10.0",
+    "expo-secure-store": "^14.2.3",
     "react": "19.1.0",
+    "react-hook-form": "^7.58.0",
     "react-native": "0.80.0",
-    "react-native-toast-message": "^2.3.0"
+    "react-native-toast-message": "^2.3.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
