--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.58.0",
     "react-native": "0.80.0",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
     "react-native-toast-message": "^2.3.0",
     "zustand": "^5.0.5"
   },
